# modulass

./: LICENSE  README.md  pyproject.toml
modulass/: __init__.py
modulass/tests/: test_thirdparty_libs.py  test_transform.py  test_transformer.py
src/modulass/: __init__.py  __main__.py
tests/: test_main.py  test_thirdparty_libs.py
tests/data/blackscholes/: BlackScholes.py  BlackScholesClass.py  BlackScholesClassFoo.py
tests/data/hello/: Hello.py  HelloClass.py  HelloClassFoo.py
